# Gesture_Arm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  signal-correctness.yml
docker/: Dockerfile.sim
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  HARDWARE.md  PHILOSOPHY.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SETUP.md  SETUP_AND_OPERATIONS.md  SYSTEM_DESIGN.md  TROUBLESHOOTING.md  architecture.md  benchmarks.md  deployment.md  index.md  quickstart.md  testing.md
gesture_arm/: __init__.py  ik_splver.py  run.py
gesture_arm/config/: __init__.py  default.yaml  settings.py
gesture_arm/evaluation/: __init__.py  metrics.py
gesture_arm/hardware/: __init__.py  arduino.py
gesture_arm/kinematics/: __init__.py
gesture_arm/models/: __init__.py  stabilizer.py
gesture_arm/speech/: __init__.py  multimodal.py
gesture_arm/vision/: __init__.py  tracker.py
memory/: PRD.md
moe-engine/: README.md  pyproject.toml  requirements.txt  roadmap.md  train.py
moe-engine/configs/: default.yaml  smoke.yaml
moe-engine/pkg/: __init__.py
moe-engine/pkg/distributed/: __init__.py  parallel_mesh.py
moe-engine/pkg/elastic/: __init__.py  fault_monitor.py
moe-engine/pkg/kernels/: __init__.py  moe_router.py
moe-engine/pkg/telemetry/: __init__.py  logger.py
moe-engine/pkg/utils/: __init__.py  config.py  mfu.py
moe-engine/scripts/: launch.sh  simulate_node_failure.sh
moe-engine/tests/: __init__.py  _chaos_worker.py  run_numerics_tests.py  test_chaos.py  test_distributed.py  test_distributed_invariants.py  test_elastic.py  test_kernels.py  test_kernels_numerics.py  test_smoke_e2e.py
notebooks/: benchmark_analysis.ipynb
scripts/: collect.py  train.py
tests/: test_core.py
