[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gesture-arm"
version = "1.0.0"
description = "Low-cost multimodal gesture control system with LSTM temporal stabilization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Min Htet Myet" }]
keywords = ["robotics", "gesture-control", "lstm", "computer-vision", "arduino"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "opencv-python>=4.8",
    "cvzone>=1.6",
    "numpy>=1.24",
    "pyfirmata>=1.1",
    "pyserial>=3.5",
    "SpeechRecognition>=3.10",
    "pyttsx3>=2.90",
    "PyYAML>=6.0",
    "pyaudio>=0.2",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.13",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
    "black>=23.9",
    "ipykernel>=6.25",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.12",
    "jupyter>=1.0",
]

[project.scripts]
gesture-arm-run      = "gesture_arm.run:main"
gesture-arm-collect  = "scripts.collect:main"
gesture-arm-train    = "scripts.train:main"

[project.urls]
Homepage   = "https://github.com/Mattral/gesture-arm"
Repository = "https://github.com/Mattral/gesture-arm"
Issues     = "https://github.com/Mattral/gesture-arm/issues"

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.ruff]
line-length = 100
select      = ["E", "F", "W", "I", "UP", "B"]
ignore      = ["E501"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
