[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-engine"
version = "0.1.0"
description = "A Composed Mixture-of-Experts Engine: Triton kernels, FSDP2 + EP, elastic infra."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "moe-engine contributors"}]
dependencies = [
    "torch>=2.5.0",
    "triton>=3.0.0",
    "numpy>=1.26.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0.1",
    "tensorboard>=2.16.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "moto>=5.0.0",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "chaos: heavy fault-injection / TorchElastic recovery scenarios; opt-in via `pytest -m chaos`",
]
